# polo

./: CMakeLists.txt  License  README.md  about.md  changelog.md  mod.json
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: Button.cpp  main.cpp  ui.cpp  ui.hpp
src/hacks/Global/: Speedhack.cpp  iconhack.cpp
src/hacks/Player/: AutoClick.cpp  AutoClicker.cpp  FlyHack.cpp  Noclip.cpp  ignore-inputs.cpp  jumphack.cpp
src/hacks/cosmetic/: ForceGhost.cpp  Longertrail.cpp  NoCameraShake.cpp
src/hacks/creator/: Disable Copying.cpp  copy-hack.cpp  costum-obj-hack.cpp  custom-obj-hack.cpp  nocmark.cpp  verifyhack.cpp
src/hacks/global/: iconhack  speedhack.cpp
src/hacks/misc/: NoWavepulse.cpp  Solidwavetrail.cpp  autopractice.cpp  basementbypass.cpp  colorhack.cpp  commenthistory.cpp  everytinghurtsandnosolids.cpp  fontpercentage.cpp  gautlet.cpp  hidepausebutton.cpp  hidepausemenu.cpp  iconhack.cpp  idkwhythisexists.hpp  instant-respawn.cpp  instantcomplete.cpp  instantrespawn.cpp  layout-mode.cpp  level-edit-on-pause-menu.cpp  main-levels.cpp  noglow.cpp  noplatjump.cpp  nowavepulse.cpp  practice-music.cpp  rainbow-icons.cpp  safe-mode.cpp  safemode.cpp  show-hitboxes.cpp  speedhack.cpp  speedhack.hpp  suicide.cpp  thechalege.cpp
src/hacks/misc/FPSBypass/: FPSBYPASS.cpp
src/hacks/misc/FrameStepper/: framestepper.cpp  framestepper.hpp
